<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App Info -->
    <string name="app_name">北京热力信息移动发布平台</string>
    <!-- Splash -->
    <string name="company_slogan">送京城温暖，还首都蓝天</string>
    <!-- Main Menu -->
    <string name="main_item_one_name">热力日报</string>
    <string name="main_item_two_name">预警信息</string>
    <string name="main_item_three_name">天气预报</string>
    <string name="main_item_four_name">信息上传</string>
    <string name="main_item_five_name">热源信息</string>
    <string name="main_item_six_name">热力站信息</string>
    <string name="main_item_serven_name">知识库</string>
    <string name="customer_service_daily">客服日报</string>
    <string name="main_item_overview_name">供热概况</string>
    <string name="heat_daily">热力日报</string>
    <string name="warning">预警信息</string>
    <string name="weather_forecast">天气预报</string>
    <string name="infomation_upload">信息上传</string>
    <string name="heat_source">热源信息</string>
    <string name="station">热力站信息</string>
    <string name="knowledge_base">知识库</string>
    <!-- Login -->
    <string name="username">用户名</string>
    <string name="username_hint">请输入用户名</string>
    <string name="password">密码</string>
    <string name="password_hint">请输入密码</string>
    <string name="login">登录</string>
    <string name="forget_password">找回密码</string>
    <string name="innerOrOuter">使用内网登陆?</string>
    <!-- Notification -->
    <string name="search_hint">查询条件</string>
    <string name="log_in_message">正在连网验证，请稍候……</string>
    <string name="connect_fail_message">连接失败，请确认网络链接正常</string>
    <string name="under_construction_message">该功能尚未开放，请更新版本后再试</string>
    <string name="refresh">刷新</string>
    <string name="loading">加载中</string>

    <!-- Weather -->
    <string name="weather">天气</string>
    <string name="today">今天</string>
    <string name="yesterday">昨天</string>
    <string name="week">趋势</string>
    <string name="weather_stations">气象监测站</string>
    <string name="history">历史查询</string>
    <string name="forcast">预报</string>
    <string name="actrual">实际</string>
    <string name="highest_tempreture">最高温度</string>
    <string name="lowest_tempreture">最低温度</string>
    <string name="average_tempreture">平均</string>
    <string name="wind">风力</string>
    <string name="update_time">更新时间</string>
    <string name="send_message_hint">输入消息</string>
    <string name="take_photo">拍照</string>
    <string name="upload_photo">上传照片</string>
    <string name="today_average">今日平均</string>
    <string name="yesterday_average">昨日平均</string>
    <string name="from_day_to_night">今天白天到夜间</string>
    <string name="zero">0</string>
    <string name="to">至</string>
    <string name="keyword_search_hint">请输入关键字</string>
    <string name="weather_axis_tempreture">温度(°)</string>
    <string name="weather_axis_time">时间</string>
    <string name="pick_from_date">从</string>
    <string name="pick_to_date">至</string>

    <!-- HeatSource -->
    <string name="total_heat_load">总热负荷：</string>
    <string name="east_area">东部面积：</string>
    <string name="west_area">西部面积：</string>
    <string name="heat_source_info">热源统计</string>
    <string name="heat_source_count">热源个数：</string>
    <string name="heat_source_area">区域</string>
    <string name="heat_source_combine_moede">组合方式</string>
    <string name="heat_source_gas_count">燃气尖峰炉</string>
    <string name="heat_source_coral_count">燃煤尖峰炉</string>
    <string name="heat_source_water_line">水线名称</string>
    <string name="heat_source_steam_line">蒸汽线名称</string>
    <string name="heat_source_is_connect">是否并网</string>
    <string name="heat_source_unit_type">机组类型</string>
    <string name="heat_source_pressure_out">供压</string>
    <string name="heat_source_pressure_in">回压</string>
    <string name="heat_source_temperature_out">供温</string>
    <string name="heat_source_temperature_in">回温</string>
    <string name="heat_source_flow_out">供流</string>
    <string name="heat_source_flow_in">回流</string>
    <string name="heat_source_instant_heat">瞬热</string>
    <string name="heat_source_supply">补流</string>
    <!-- Station -->
    <string name="tap_to_search">点击查询</string>
    <string name="station_realtime_heat">瞬时热量(GJ/h)</string>
    <string name="station_realtime_flow">瞬时流量(t/h)</string>
    <string name="station_total_heat">累计热量(GJ)</string>
    <string name="station_total_flow">累计流量(t)</string>
    <string name="station_supply_water_quantity">补水量(t)</string>
    <string name="temperature">温度</string>
    <string name="pressure">压力</string>
    <string name="backwater">回水</string>
    <string name="supplywater">供水</string>
    <string name="search_history">历史数据查询</string>
    <!-- Date -->
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="week_name">周</string>
    <string name="monday">星期一</string>
    <string name="tuesday">星期二</string>
    <string name="wednesday">星期三</string>
    <string name="thursday">星期四</string>
    <string name="friday">星期五</string>
    <string name="saturday">星期六</string>
    <string name="sunday">星期日</string>
    <string name="select_time">选择时间</string>
    <string name="one_day">1天</string>
    <string name="one_week">1周</string>
    <string name="one_month">1个月</string>
    <string name="three_months">3个月</string>
    <string name="this_year">供暖季</string>
    <string name="area_total">全网</string>
    <string name="area_east">东部</string>
    <string name="area_west">西部</string>

    <!-- Unit -->
    <string name="degree_unit">°</string>
    <string name="area_unit">万㎡</string>
    <string name="heat_unit">GJ</string>
    <string name="pressure_unit">MPa</string>
    <string name="water_unit">t</string>
    <string name="heat_per_hour">GJ/h</string>
    <string name="water_per_hour">t/h</string>
    <string name="test_content">左家庄热力站11月18日连续超标10。11月19日超标12。11月20日超标11</string>

    <!-- Menu -->
    <string name="contact_us">联系我们</string>
    <string name="help_us">帮助</string>
    <string name="version_info">版本信息</string>
    <string name="title_activity_version">版本信息</string>
    <string name="action_settings">Settings</string>
    <string name="version_description">当前版本：V2.2.1</string>
    <string name="version_published_at">更新时间：2015/2/9</string>
    <string name="download_latest">点击下载最新版本</string>
    <string name="already_latest">已经是最新版本</string>

</resources>