<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_div"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    >

    <EditText
        android:id="@+id/txtUserId"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:inputType="text"
        android:singleLine="true" />

    <EditText
        android:id="@+id/txtPwd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:singleLine="true" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:text="@string/login" />

    <Button
        android:id="@+id/btnForgetPwd"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:text="@string/forget_password" />

</LinearLayout>