<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/small_margin"
    android:orientation="vertical" >

    <RadioGroup
        android:id="@+id/detail_graph_radios"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/detail_graph_radio_day"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/day" />
        <RadioButton
            android:id="@+id/detail_graph_radio_week"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/week_name" />
        <RadioButton
            android:id="@+id/detail_graph_radio_month"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/month" />
        <RadioButton
            android:id="@+id/detail_graph_radio_select"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/select_time" />
    </RadioGroup>

	<LinearLayout
	    android:id="@+id/detail_graph"
	    android:orientation="vertical"
	    android:layout_alignParentTop="true"
	    android:layout_width="fill_parent"
	    android:layout_height="match_parent"></LinearLayout>

</RelativeLayout>