<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_page_item3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent_black" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/large_margin"
        android:layout_centerInParent="true" >

        <ImageView
            android:id="@+id/main_item_three_image"
            android:layout_width="@dimen/button_height"
            android:layout_height="@dimen/button_height"
            android:contentDescription="@string/weather"
            android:scaleType="fitStart"
            android:src="@drawable/ic_weather_33" />

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/main_item_three_txt1"
                style="@style/mainTitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:text="@string/zero"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/main_item_three_txt2"
                style="@style/mainTitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:text="@string/loading"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/main_item_three_txt3"
                style="@style/mainTitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:text="@string/loading"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        style="@style/mainTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/medium_margin"
        android:text="@string/main_item_three_name" />

</RelativeLayout>