<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/weather_background"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="180dp"
        android:layout_marginTop="@dimen/medium_margin"
        android:baselineAligned="false" >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical" >
            <TextView
                android:id="@+id/today_date"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/small_font_size"
                android:textColor="@color/white"
                android:layout_marginLeft="@dimen/medium_margin"
                android:text="@string/loading">
            </TextView>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/medium_margin" >
                <TextView
                    android:id="@+id/today_average_tempreture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="@color/white"
                    android:textSize="@dimen/xxlarge_font_size" >
                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/degree_unit"
                    android:textColor="@color/white"
                    android:textSize="@dimen/xxlarge_font_size" >
                </TextView>
            </LinearLayout>
            <TextView
                android:id="@+id/today_weather"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginLeft="@dimen/medium_margin"
                android:text="@string/loading">
            </TextView>
            <TextView
                android:id="@+id/today_summary"
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginLeft="@dimen/medium_margin"
                android:text="@string/loading" >
            </TextView>
        </LinearLayout>
        <LinearLayout 
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" >
            <ImageView
                android:id="@+id/today_weather_icon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitStart"
                android:src="@drawable/sunny"
                android:contentDescription="@string/weather" />
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/oneTabList"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:scrollbarStyle="outsideOverlay" >
    </ListView>

</LinearLayout>